[package]
name = "tymbark-gui"
version = "0.1.1"
edition = "2021"
license = "CC-BY-4.0"
description = "GUI Tymbark generator made with egui"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.17.0"
log = "0.4.14"
env_logger = "0.9.0"
rand = "0.8.5"
clap = { version = "3.1.3", features = ["derive"] }
winapi = { version = "0.3.9", features = ["winuser"] }
clipboard-win = "4.4.1"