[package]
name = "tymbark-gui"
version = "0.1.1"
edition = "2021"
license = "CC-BY-4.0"
description = "GUI Tymbark generator made with egui"
default-run = "tymbark-gui"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.21.3"
log = "0.4.14"
rand = "0.8.5"

[[bin]]
name = "tymbark-gui"
path = "src/main.rs"