[package]
name = "tymbark-gui"
version = "0.1.1"
edition = "2021"
license = "CC-BY-4.0"
description = "GUI Tymbark generator made with egui"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

rustflags = ["--cfg=web_sys_unstable_apis"]

[dependencies]
eframe = { version = "0.21.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
egui = "0.21.0"
getrandom = { version = "0.2.8", features = ["js"] }
log = "0.4.14"
rand = "0.8.5"
tracing-wasm = "0.2.1"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
web-sys = { version = "0.3.61", features = ["Clipboard"] }
